[package]
name = "witness_encryption_functional_commitment"
version = "0.1.0"
edition = "2021"

[lib]
name = "witness_encryption_functional_commitment"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.67"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2.90"
